--- a/app/package.json
+++ b/app/package.json
@@ -9,10 +9,12 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.3.4",
+    "bcrypt": "^3.0.6",
     "bootstrap": "^4.3.1",
     "meteor-node-stubs": "^0.4.1",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
+    "react-google-login": "^5.0.4",
     "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.1",
     "redux": "^4.0.1"
