--- a/app/package.json
+++ b/app/package.json
@@ -17,7 +17,8 @@
     "react-google-login": "^5.0.4",
     "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.1",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "redux-form": "^8.2.4"
   },
   "meteor": {
     "mainModule": {
