--- a/app/package.json
+++ b/app/package.json
@@ -11,14 +11,18 @@
     "@babel/runtime": "^7.3.4",
     "bcrypt": "^3.0.6",
     "bootstrap": "^4.3.1",
+    "lodash": "^4.17.11",
     "meteor-node-stubs": "^0.4.1",
     "react": "^16.5.0",
+    "react-bootstrap": "^1.0.0-beta.9",
     "react-dom": "^16.5.0",
     "react-google-login": "^5.0.4",
     "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.1",
     "redux": "^4.0.1",
-    "redux-form": "^8.2.4"
+    "redux-combine-actions": "^0.1.2",
+    "redux-form": "^8.2.4",
+    "redux-thunk": "^2.3.0"
   },
   "meteor": {
     "mainModule": {
