--- a/app/package.json
+++ b/app/package.json
@@ -18,7 +18,8 @@
     "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.1",
     "redux": "^4.0.1",
-    "redux-form": "^8.2.4"
+    "redux-form": "^8.2.4",
+    "styled-components": "^4.3.2"
   },
   "meteor": {
     "mainModule": {
