--- a/app/package.json
+++ b/app/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.3.4",
+    "base-64": "^0.1.0",
     "bcrypt": "^3.0.6",
     "bootstrap": "^4.3.1",
     "lodash": "^4.17.11",
@@ -20,10 +21,10 @@
     "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.1",
     "redux": "^4.0.1",
-    "redux-form": "^8.2.4",
-    "styled-components": "^4.3.2",
     "redux-combine-actions": "^0.1.2",
-    "redux-thunk": "^2.3.0"
+    "redux-form": "^8.2.4",
+    "redux-thunk": "^2.3.0",
+    "styled-components": "^4.3.2"
   },
   "meteor": {
     "mainModule": {
