--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,8 @@
     "base-64": "^0.1.0",
     "bcrypt": "^3.0.6",
     "bootstrap": "^4.3.1",
+    "jquery": "^3.4.1",
+    "jquery-validation": "^1.19.1",
     "lodash": "^4.17.11",
     "meteor-node-stubs": "^0.4.1",
     "polished": "^3.4.1",
