--- a/app/package.json
+++ b/app/package.json
@@ -29,7 +29,8 @@
     "redux-combine-actions": "^0.1.2",
     "redux-form": "^8.2.4",
     "redux-thunk": "^2.3.0",
-    "styled-components": "^4.3.2"
+    "styled-components": "^4.3.2",
+    "validator": "^11.1.0"
   },
   "meteor": {
     "mainModule": {
