--- a/app/package.json
+++ b/app/package.json
@@ -20,11 +20,13 @@
     "react": "^16.5.0",
     "react-bootstrap": "^1.0.0-beta.9",
     "react-dom": "^16.5.0",
+    "react-froala-wysiwyg": "^3.0.2",
     "react-google-login": "^5.0.4",
     "react-markdown": "^4.1.0",
-    "react-redux": "^7.0.3",
+    "react-redux": "^7.1.0",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.0.1",
+    "react-select": "^3.0.4",
     "redux": "^4.0.1",
     "redux-combine-actions": "^0.1.2",
     "redux-form": "^8.2.4",
