--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,7 @@
     "jquery-validation": "^1.19.1",
     "lodash": "^4.17.11",
     "meteor-node-stubs": "^0.4.1",
+    "mongoose": "^5.6.5",
     "polished": "^3.4.1",
     "react": "^16.5.0",
     "react-bootstrap": "^1.0.0-beta.9",
