--- a/app/package.json
+++ b/app/package.json
@@ -16,7 +16,6 @@
     "jquery-validation": "^1.19.1",
     "lodash": "^4.17.11",
     "meteor-node-stubs": "^0.4.1",
-    "mongoose": "^5.6.5",
     "polished": "^3.4.1",
     "react": "^16.5.0",
     "react-bootstrap": "^1.0.0-beta.9",
@@ -32,6 +31,7 @@
     "redux-combine-actions": "^0.1.2",
     "redux-form": "^8.2.4",
     "redux-thunk": "^2.3.0",
+    "simpl-schema": "^1.5.5",
     "styled-components": "^4.3.2",
     "validator": "^11.1.0"
   },
