--- a/app/package.json
+++ b/app/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.3.4",
+    "aws-sdk": "^2.496.0",
     "base-64": "^0.1.0",
     "bcrypt": "^3.0.6",
     "bootstrap": "^4.3.1",
+    "fs": "0.0.1-security",
     "jquery": "^3.4.1",
     "jquery-validation": "^1.19.1",
     "lodash": "^4.17.11",
@@ -20,6 +22,7 @@
     "react": "^16.5.0",
     "react-bootstrap": "^1.0.0-beta.9",
     "react-dom": "^16.5.0",
+    "react-dropzone": "^10.1.6",
     "react-froala-wysiwyg": "^3.0.2",
     "react-google-login": "^5.0.4",
     "react-markdown": "^4.1.0",
@@ -32,6 +35,7 @@
     "redux-form": "^8.2.4",
     "redux-thunk": "^2.3.0",
     "simpl-schema": "^1.5.5",
+    "stream": "0.0.2",
     "styled-components": "^4.3.2",
     "validator": "^11.1.0"
   },
