--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jquery-validation": "^1.19.1",
     "lodash": "^4.17.11",
     "meteor-node-stubs": "^0.4.1",
+    "moment": "^2.24.0",
     "polished": "^3.4.1",
     "react": "^16.5.0",
     "react-bootstrap": "^1.0.0-beta.9",
@@ -33,6 +34,7 @@
     "redux": "^4.0.1",
     "redux-combine-actions": "^0.1.2",
     "redux-thunk": "^2.3.0",
+    "semantic-ui-react": "^0.87.3",
     "simpl-schema": "^1.5.5",
     "stream": "0.0.2",
     "styled-components": "^4.3.2",
