--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "visualize": "meteor --production --extra-packages bundle-visualizer"
   },
   "dependencies": {
-    "@babel/runtime": "^7.3.4",
+    "@babel/runtime": "^7.5.5",
+    "antd": "^3.21.1",
     "aws-sdk": "^2.496.0",
     "base-64": "^0.1.0",
     "bcrypt": "^3.0.6",
     "bootstrap": "^4.3.1",
     "fs": "0.0.1-security",
+    "indexof": "0.0.1",
     "jquery": "^3.4.1",
     "jquery-validation": "^1.19.1",
     "lodash": "^4.17.11",
