--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "redux": "^4.0.1",
     "redux-combine-actions": "^0.1.2",
     "redux-thunk": "^2.3.0",
+    "semantic-ui": "^2.4.2",
     "semantic-ui-react": "^0.87.3",
     "simpl-schema": "^1.5.5",
     "stream": "0.0.2",
