--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dropzone": "^10.1.6",
     "react-froala-wysiwyg": "^3.0.2",
     "react-google-login": "^5.0.4",
+    "react-image-gallery": "^0.8.18",
     "react-markdown": "^4.1.0",
     "react-redux": "^7.1.0",
     "react-router-bootstrap": "^0.25.0",
